[package]
name = "ebml_macros"
version = "0.1.0"
authors = ["Zachary Neely <zrussellneely@gmail.com>"]

[dependencies]
chrono = "0.4"
ebml = { path = "../ebml"}
nom = { version = "4", features = ["verbose-errors"] }
quote = "0.6"

clippy = { optional = true, version = "*" }

[features]
dev = ["clippy"]
